--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ span[data-image] .caption {
   .float-left,
   .float-right {
     width: 45%;
-    margin: 1em 0 0 0;
+    margin: 0.5em 0;
   }
   .float-left {
     margin-right: 1em;
