--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ body {
   grid-column: article;
 }
 .container .w-column {
-  grid-column: article;
+  grid-column: full;
 }
 .container .w-grid {
   grid-column: full;
@@ -87,6 +87,9 @@ body {
   margin: 1em 0;
 }
 @media (min-width: 640px) {
+  .container .w-column {
+    grid-column: article;
+  }
   .container .w-large {
     grid-column: article;
     margin: 1em -4vw;
