--- a/css/main.css
+++ b/css/main.css
@@ -425,8 +425,24 @@ span[name]::after {
 .masthead {
   grid-row: 1;
   grid-column: full;
-  background: linear-gradient(60deg, #6a4ce7 0%, #74effb 100%);
+  position: relative;
   z-index: -1;
+}
+.masthead::before {
+  content: '';
+  background: linear-gradient(60deg, #6a4ce7 0%, #74effb 100%);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.masthead video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  opacity: 0.2;
 }
 .inner-cover {
   grid-row: 1;
