--- a/css/main.css
+++ b/css/main.css
@@ -416,7 +416,12 @@ audio[data-audio-player] + p {
     background-repeat: no-repeat;
     background-size: contain;
     width: 1em;
-    height: 100%;
+    height: 1em;
+  }
+  .speaker-icon:after {
+    content: '';
+    position: absolute;
+    padding: 1em;
   }
   *:hover > .speaker-icon {
     opacity: 1;
