--- a/css/main.css
+++ b/css/main.css
@@ -758,7 +758,7 @@ blockquote:not(.pullquote) > * {
   mix-blend-mode: screen;
 }
 .audio-player .progress {
-  width: 25%;
+  width: 0;
   height: 100%;
   background-color:rgba(106, 76, 231);
 }
