--- a/css/main.css
+++ b/css/main.css
@@ -713,6 +713,14 @@ blockquote:not(.pullquote) > * {
   position: fixed;
   top: 0;
   z-index: 1;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s;
+}
+.audio-player--active {
+  opacity: 1;
+  pointer-events: auto;
 }
 .audio-player:before {
   content: '';
