--- a/css/main.css
+++ b/css/main.css
@@ -434,8 +434,9 @@ audio[data-audio-player] + p {
     background-image: url(../speaker.svg);
     background-repeat: no-repeat;
     background-size: contain;
-    width: 1em;
+    width: 2em;
     height: 1em;
+    z-index: -1;
   }
   *:hover > .speaker-icon {
     opacity: 1;
