--- a/css/main.css
+++ b/css/main.css
@@ -297,8 +297,13 @@ figure {
 .font-normal {
   font-weight: 400;
 }
+
 .font-bold {
   font-weight: 800;
+}
+
+.m-0 {
+  margin: 0
 }
 
 /* sidenotes */
